Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.2.0:
	Libpurple:
	* New protocol plugin: MySpaceIM (Jeff Connelly, Google Summer of
	  Code)

	Pidgin:
	* Insert Horizontal Rules and Strikethrough text from toolbar

	Finch:
	* Per-conversation mute and logging options (accessible from the menu)

version 2.1.1 (08/20/2007):
	Yahoo:
	* Added an account action to open your inbox in the yahoo prpl.
	* Added support for Unicode status messages in Yahoo.
	* Server-stored aliases for Yahoo. (John Moody)
	* Fixed support for Yahoo! doodling.
	* Limited support for MSN Messenger contacts
	
	Bonjour:
	* Bonjour plugin uses native Avahi instead of Howl
	* Bonjour plugin supports Buddy Icons

	XMPP:
	* Only report conversation close when 'send typing notifications'
	  preference is turned on (Bob Rossi)

	Pidgin:
	* Show current outgoing conversation formatting on the font label on
	  the toolbar
	* Slim new redesign of conversation tabs to maximize number of
	  conversations that can fit in a window
	* Tab bar is not visible when only one conversation is open. You can
	  drag and drop conversations from the infopane.
	* Moved "Reset Formatting" toolbar button to Font menu.
	* Double click on the infopane to alias buddies and set topics
	  on chats
	* New smiley style

	Finch:
	* Sound support (Eric Polino)

version 2.1.0 (07/28/2007):
	libpurple:
	* Core changes to allow UIs to use second-granularity for scheduling.
	  Pidgin and Finch, which use the glib event loop, were changed to use
	  g_timeout_add_seconds() on glib >= 2.14 when possible.  This allows
	  glib to better group our longer timers to increase power efficiency.
	  (Arjan van de Ven with Intel Corporation)
	* No longer linkifies screennames containing @ signs in join/part
	  notifications in chats
	* With the HTML logger, images in conversations are now saved.
	  NOTE: Saved images are not yet displayed when loading logs.